[gd_scene load_steps=11 format=1]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Res/Quad.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/BallEffect.tscn" type="PackedScene" id=6]
[ext_resource path="res://Res/Night Machine.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/Panic.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=2]

font/size = 34
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]

font/size = 64
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 7 )

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 500, 300 )
texture = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]

transform/pos = Vector2( 500, 300 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Camera"]

process_mode = 1
wait_time = 0.6
one_shot = true
autostart = false

[node name="Ball" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 500, 300 )

[node name="Paddle" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 30, 300 )

[node name="BallEffect" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( -30, -30 )

[node name="SpaceToStart" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 290.0
margin/top = 200.0
margin/right = 730.0
margin/bottom = 236.0
custom_fonts/font = SubResource( 2 )
text = "Press <Space> to start"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Control" type="Control" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -448.0
margin/top = 2.0
margin/right = -488.0
margin/bottom = -38.0
script/script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Control"]

playback/process_mode = 1
playback/active = false
playback/repeat = true
playback/speed = 1.0

[node name="PanicCount" type="Label" parent="Control"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -130.0
margin/top = -20.0
margin/right = -126.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.910156, 0.127991, 0.127991, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
text = "Panic x 1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="Camera/Timer" to="Camera" method="_on_Timer_timeout"]

[connection signal="area_enter" from="Ball" to="Ball" method="_on_Ball_area_enter"]

[connection signal="endGame" from="Ball" to="." method="_on_Ball_endGame"]

[connection signal="screenCollide" from="Ball" to="." method="_on_Ball_screenCollide"]


